--- a/ansible-dev/qa-play.yml
+++ b/ansible-dev/qa-play.yml
@@ -25,7 +25,7 @@
           path: /opt/qa/spg/spg.log
           state: touch   
       - name: start and enabled docker daemon
-        sytemd_service:
+        systemd:
           name: docker
           state: started
           enabled: yes    
