--- a/ansible-dev/qa-play.yml
+++ b/ansible-dev/qa-play.yml
@@ -1,31 +1,35 @@
 ---
--hosts: ws
-  become: yes
-  become_user: root
-  ignore_errors: yes
-  gather_facts: true
-    tasks:
-      - name: Install packages
-        yum:
-          - state: present
-          - name:
-            - docker
-            - wget
-            - lsof
-            - passwd
-            - java-11*
-            - unzip
-      - name: creat a directory      
-        file:
-          path: /opt/qa/spg
-          state: directory
-          mode: '0755'
-      - name: creat a log file    
-        file:
-          path: /opt/qa/spg/spg.log
-          state: touch   
-      - name: start and enabled docker daemon
-        systemd:
-          name: docker
-          state: started
-          enabled: yes    
+hosts: ws
+become: yes
+become_user: root
+ignore_errors: yes
+gather_facts: true
+
+tasks:
+  - name: Install packages
+    yum:
+      state: present
+      name:
+        - docker
+        - wget
+        - lsof
+        - passwd
+        - java-11*
+        - unzip
+
+  - name: Create a directory
+    file:
+      path: /opt/qa/spg
+      state: directory
+      mode: '0755'
+
+  - name: Create a log file
+    file:
+      path: /opt/qa/spg/spg.log
+      state: touch
+
+  - name: Start and enable Docker daemon
+    systemd:
+      name: docker
+      state: started
+      enabled: yes
