--- a/ansible-dev/qa-deploy.yml
+++ b/ansible-dev/qa-deploy.yml
@@ -1,40 +1,30 @@
 ---
-- name: QA Playbook
-  hosts: ws
+- hosts: ws
   become: yes
-  become_user: root
-  gather_facts: true
-
+  become_user: root 
+  ignore_errors: yes
   tasks:
-    - name: Delete old artifacts
+    - name: Delete Old Artifact
       file:
         path: /opt/qa/spg/*.jar
         state: absent
-
+    
     - name: Get the PID
-      shell: lsof -i :8082
+      shell:  lsof -t -i :8082
       register: pid_output
-      ignore_errors: yes
-      tags:
-        - a
-
-    - name: Print pid_output
-      debug:
-        var: pid_output
-      tags:
-        - b    
-
-    - name: Kill running app
+    
+    - name: Kill Running App
       shell: "kill -9 {{ pid_output.stdout }}"
-      when: pid_output.stdout is defined and pid_output.stdout!= ''
+      when: pid_output.stdout != ''
 
-    - name: Download new artifact
+    - name: Download New Artifact  
       get_url:
         url: http://34.201.161.49:8081/artifactory/geolocation/geo/bio_17.jar
-        dest: /opt/qa/spg/bioMedical.jar
+        dest: /opt/qa/spg
         url_username: admin
         url_password: password
-        validate_certs: no
 
-    - name: Run the app
-      command: nohup java -jar /opt/qa/spg/*.jar > /opt/qa/spg.log 2>&1 &
+    - name: Run the App
+      shell: nohup java -jar /opt/qa/spg/*.jar > /opt/qa/spg.log 2>&1 &
+             
+                        
